# loris

./: CMakeLists.txt  DragonScript.sln  DragonScript.vcxproj  DragonScript.vcxproj.filters  LICENSE  README.md  ReadMe.txt  SYNTAX.md
demo/: DragonScriptGameExample.7z
include/dragonscript/: DSMathLib.h  DSMathLib.hpp  DSUtilsLib.h  DSUtilsLib.hpp  assembly.hpp  ast.hpp  compiler.hpp  dragonscript.hpp  error.hpp  lexer.hpp  parser.hpp  virtualmachine.hpp
include/loris/: assembly.hpp  ast.hpp  bind.hpp  compiler.hpp  error.hpp  lexer.hpp  loris.hpp  parser.hpp  virtualmachine.hpp
include/loris/libs/: math.hpp  utils.hpp
samples/: shooter.ds
src/: assembly.cpp  bind.cpp  compiler.cpp  lexer.cpp  loris.cpp  parser.cpp  virtualmachine.cpp
